added nice header

--- a/AdaptationFinder/src/index.html
+++ b/AdaptationFinder/src/index.html
@@ -9,6 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <!-- Add nice header here -->
+  <header>
+    <div class = "overlay">
+       <h1> AdaptationFinder </h1> 
+       <h2> For all your book and movie needs! </h2>
+    </div>
+  </header>
+  <h1 style = "text-align: center;"> Components go here </h1>
 </body>
 </html>
